# cosmic-gmail-panel

./: .gitignore  Cargo.toml  LICENSE.md  README.md  justfile
data/: io.github.cosmic_applet_gmail.desktop
src/: app.rs  auth.rs  config.rs  gmail.rs  main.rs  secrets.rs  settings.rs  ui.rs
