[package]
name = "cosmic-applet-gmail"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "COSMIC panel applet that shows the Gmail unread count"
repository = "https://github.com/laurent-c/cosmic-applet-gmail"

[[bin]]
name = "cosmic-applet-gmail"
path = "src/main.rs"

[dependencies]
anyhow = "1"
futures-util = "0.3"
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
oauth2 = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "process", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
]

[dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic.git"
package = "cosmic-config"

[dependencies.cosmic-config-derive]
git = "https://github.com/pop-os/libcosmic.git"
package = "cosmic-config-derive"
